cmake_minimum_required(VERSION 3.8)
project(transform_broadcaster)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(tf2 REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(tf2_geometry_msgs REQUIRED)

add_executable(transform_broadcaster src/main.cpp
  src/TransformBroadcasterNode.cpp
  src/broadcasters/StaticFramePublisher.cpp
)
target_include_directories(transform_broadcaster PRIVATE include)

ament_target_dependencies(transform_broadcaster
    geometry_msgs
    rclcpp
    tf2
    tf2_ros
    tf2_geometry_msgs
)

install(TARGETS transform_broadcaster
DESTINATION lib/${PROJECT_NAME}
)

install(DIRECTORY include/
  DESTINATION share/${PROJECT_NAME}
)


install(DIRECTORY launch
  DESTINATION share/${PROJECT_NAME}
)
ament_package()
